<resources>
    <string name="app_name">CentroComercial</string>
    <string name="botom"> Botom app Bar</string>
    <string name="titulo1">Nuevo Centro</string>
    <string name="direccion1"> Av. de Pius XII, 2, Campanar,València, Valencia</string>
    <string name="tiendas">250 tiendas</string>
    <string name="titulo2">El Saler</string>
    <string name="direccion2">Av. del Professor López Piñero, 16</string>
    <string name="tiendas2">160 tiendas</string>
    <string name="titulo3">Bonaire</string>
    <string name="direccion3">Autovía del Este, Km. 345, Valencia</string>
    <string name="tiendas3">123 tiendas</string>
    <string name="titulo4">El Manar</string>
    <string name="direccion4">Plaça Industrial el Manar, 3, València,</string>
    <string name="tiendas4">17 tiendas</string>

    <string-array name="locales">
        <item name="local">100 Montaditos</item>
        <item name="local">Primor</item>
        <item name="local">Queen Nails</item>

    </string-array>

</resources>