<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="25dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:backgroundTint="@color/Rosa2"
            app:cardCornerRadius="15dp"
            android:layout_marginBottom="20dp"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <ImageView
                    android:id="@+id/ImagenCentro1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </ImageView>
                <TextView
                    android:id="@+id/titulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titulo1"
                    app:layout_constraintBottom_toTopOf="@id/direccion"
                    app:layout_constraintLeft_toLeftOf="parent"
                    tools:ignore="MissingConstraints"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="5dp">

                </TextView>
                <TextView
                    android:id="@+id/direccion"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    tools:ignore="MissingConstraints"
                    android:text="@string/direccion1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="10dp"
                    >

                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="MissingConstraints"
                    android:text="@string/tiendas"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="20dp"
                    android:layout_marginRight="10dp"
                    >

                </TextView>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:backgroundTint="@color/Rosa2"
            app:cardCornerRadius="15dp"
            android:layout_marginBottom="20dp"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <ImageView
                    android:id="@+id/ImagenCentro2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="matrix"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent">

                </ImageView>
                <TextView
                    android:id="@+id/titulo2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titulo2"
                    app:layout_constraintBottom_toTopOf="@id/direccion2"
                    app:layout_constraintLeft_toLeftOf="parent"
                    tools:ignore="MissingConstraints"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="5dp">

                </TextView>
                <TextView
                    android:id="@+id/direccion2"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    tools:ignore="MissingConstraints"
                    android:text="@string/direccion2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="10dp"
                    >

                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="MissingConstraints"
                    android:text="@string/tiendas2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="20dp"
                    android:layout_marginRight="10dp"
                    >

                </TextView>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>


    </ScrollView>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botom"
            android:layout_gravity="center_horizontal"
            >

        </TextView>
    </com.google.android.material.bottomappbar.BottomAppBar>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Rosa"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="70dp"
        android:layout_marginRight="15dp"
        >

    </com.google.android.material.floatingactionbutton.FloatingActionButton>

</androidx.coordinatorlayout.widget.CoordinatorLayout>